Fix navbar spacing and sizing

--- a/assets/stylesheets/_variables.scss
+++ b/assets/stylesheets/_variables.scss
@@ -4,6 +4,8 @@ $white: #fff;
 $primary: #39848D;
 $secondary: #9D1840;
 
+$light-primary: #C5EFF7;
+
 $midnight-blue: #18454B;
 $saddle-brown: #561427;
 $dark-slate-grey: #050607;
